<resources>
    <string name="app_name">Bimbel App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="id_bimbel">ID Bimbel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="or">Atau</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="not_have_account">Belum punya akun?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>